# HPIPS_Chain

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: currency.rs  lib.rs  memo.rs  migration.rs  traits.rs
runtime/src/forum/: Cargo.toml
runtime/src/governance/: council.rs  election.rs  proposals.rs  sealed_vote.rs
runtime/src/membership/: members.rs
runtime/src/roles/: actors.rs
runtime/src/service_discovery/: discovery.rs
runtime/src/storage/: data_directory.rs  data_object_storage_registry.rs  data_object_type_registry.rs  downloads.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
