[features]
default = ['std']
std = [
    'parity-codec/std',
    'parity-codec-derive/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'substrate-module-template/std',
    'staking/std',
    'session/std',
    'offchain-primitives/std',
    'consensus-authorities/std',
    'grandpa/std',
    'finality-tracker/std',
    'forum/std'
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
branch = 'v1.0'

[dependencies.substrate-module-template]
default_features = false
path = '../../substrate-module-template/'

[dependencies.forum]
default_features = false
package = 'substrate-forum-module'
path = '../runtime/src/forum'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
branch = 'v1.0'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
branch = 'v1.0'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
branch = 'v1.0'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
branch = 'v1.0'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
branch = 'v1.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
branch = 'v1.0'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
branch = 'v1.0'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.parity-codec-derive]
default-features = false
version = '3.3'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'v1.0'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
branch = 'v1.0'

[dependencies.runtime-io]
default_features = false
path = "../core/sr-io"
package = 'sr-io'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
branch = 'v1.0'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
branch = 'v1.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
branch = 'v1.0'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
branch = 'v1.0'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
branch = 'v1.0'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
branch = 'v1.0'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
branch = 'v1.0'

[dependencies.session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-session'
branch = 'v1.0'

[dependencies.offchain-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
branch = 'v1.0'

[dependencies.consensus-authorities]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-authorities'
branch = 'v1.0'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
branch = 'v1.0'

[dependencies.finality-tracker]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-finality-tracker'
branch = 'v1.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'hpips-runtime'
version = '1.0.0'
