[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['hpips-runtime/std']
[dependencies.hpips-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'hpips-runtime-wasm'
version = '1.0.0'
