[package]
name = "substrate-forum-module"
version = "1.0.0"
authors = ["Bedeho Mender <bedeho.mender@protonmail.com>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "3.2", default-features = false }
parity-codec-derive = { version = "3.1", default-features = false }
rstd = { package = 'sr-std', default-features = false, git = "https://github.com/joystream/substrate.git"}
runtime-primitives = { package = 'sr-primitives', default-features = false, git = "https://github.com/joystream/substrate.git"}
srml-support = { package = 'srml-support', default-features = false, git = "https://github.com/joystream/substrate.git"}
srml-support-procedural = { package = 'srml-support-procedural', git = "https://github.com/joystream/substrate.git"}
system = { package = 'srml-system', default-features = false, git = "https://github.com/joystream/substrate.git"}
balances = { package = 'srml-balances', default-features = false, git = "https://github.com/joystream/substrate.git"}

[dependencies.timestamp]
default_features = false
git = 'https://github.com/joystream/substrate.git'
package = 'srml-timestamp'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/joystream/substrate.git'
package = 'sr-io'

[dev-dependencies]
runtime-io = { package = 'sr-io', default-features = false, git = "https://github.com/joystream/substrate.git"}
primitives = { package = 'substrate-primitives', git = "https://github.com/joystream/substrate.git"}

[features]
default = ["std"]
std = [
	"serde",
	"serde_derive",
	"parity-codec/std",
	"parity-codec-derive/std",
	"rstd/std",
	"runtime-io/std",
	"runtime-primitives/std",
	"srml-support/std",
	"system/std",
  	"balances/std",
	"timestamp/std",
]
